--- a/miverdaderocss.css
+++ b/miverdaderocss.css
@@ -15,6 +15,7 @@ header {
     background-color: black;
     height: 100px;
     border-radius: 20px;
+    margin: 5px 0px 3px;
         
 }
 #enca{
@@ -36,6 +37,8 @@ header {
     height: 200px;
     border-radius: 20px;
     font-size: 12px;
+    padding: 15px 15px;
+    
 }
 
 a {
@@ -50,17 +53,14 @@ a:hover {
     font-size: 22px;
 }
 
-nav {
-    height: 50px;
-    border-radius: 20px;
-    top: 0px;
-}
+
 
 #tecnologias {
     background-color: rgb(255, 255, 255);
     height: 200px;
     text-align: center;
     border-radius: 20px;
+    margin: 5px 0px 5px;
 }
 
 #proyectos {
@@ -68,6 +68,7 @@ nav {
     height: 200px;
     text-align: center;
     border-radius: 20px;
+    margin: 5px 0px 5px;
 }
 
 body {
